2001-04-23  John Sullivan  <sullivan@eazel.com>

	* data/mime/gnome-vfs.keys.in: Added can_be_executable
	flag to text/x-python so they will work as Nautilus scripts.

2001-04-20  Seth Nickell  <snickell@stanford.edu>

	* data/mime/gnome-vfs.keys.in:
	Fix bug #7216, jbuilder in the application database but
	not listed for files of type text/x-java.
	
2001-04-17  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-utils.c:
	(gnome_vfs_get_local_path_from_uri): Loosen rule so that URLs that
	say "file:/etc/passwd" will be accepted.
	* test/test-uri.c: (main): Update test to match.

2001-04-14  Dan Winship  <danw@ximian.com>

	* libgnomevfs/gnome-vfs-mime-info.c (get_value_real): Plug a
	memory leak.

	* libgnomevfs/gnome-vfs-mime-handlers.c
	(gnome_vfs_mime_get_short_list_applications): Ditto.

2001-04-14  Maciej Stachowiak  <mjs@eazel.com>

	* modules/translate-method.c (tr_uri_translate): Be less tricky so
	that translate patterns that include a hostname, port, user, etc
	will work properly.

2001-04-13  Darin Adler  <darin@eazel.com>

	* gnome-vfs.spec.in: Remove the slave program from the spec
	file, now that we don't use it any more.

2001-04-13  Darin Adler  <darin@eazel.com>

	* configure.in: Missed Makefile list.

2001-04-13  Darin Adler  <darin@eazel.com>

	* acconfig.h:
	* configure.in:
	Eliminate --disable-libefs, --with-default-backend, and
	GNOME_VFS_DEFAULT_BACKEND.
	
	* libgnomevfs/gnome-vfs-xfer.c: (init_progress): Initialize the
	file index to 0, since we now increment before each item.
	(at_end): Helper function.
	(call_progress_often_internal): Shared code for the two "often"
	versions of the call_progress function. The only change is to
	always send out progress once at the end.
	(call_progress_often),	(call_progress_with_uris_often): Use new
	function to share most of the code.
	(remove_file): Bump the file index before dealing with the file.
	(remove_directory): Bump the file index before dealing with the
	directory.